Fix layout issue with contact form on FireFox mobile

--- a/src/components/ContactForm/contact-form.module.scss
+++ b/src/components/ContactForm/contact-form.module.scss
@@ -32,6 +32,7 @@
     line-height: $defaultLineHeight;
     max-width: calc($formWidth - 45px);
     padding: 0.5rem;
+    width: 100%;
   }
 
   input {
